fixed spacing on patient list
also added a "view patient" button to on the list

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,10 @@
     margin-right: 10px;
 }
 
+#patientListButton {
+    margin-bottom: 10px;
+}
+
 .thumb {
     background-size: cover;
     height: 10vw;
